Prevent checkbox label overflow by fixing width to 400px

--- a/scss/elements/_checkbox.scss
+++ b/scss/elements/_checkbox.scss
@@ -20,6 +20,8 @@
             }
 
             + label {
+                width: 400px;
+
                 &:before {
                     content: "";
                     border: 2px solid $ship-grey;
